--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "typeinfo": "cpp",
-        "system_error": "cpp"
+        "system_error": "cpp",
+        "hash_map": "cpp"
     }
 }
